# p2p_btc

./: .gitignore  CMakeLists.txt  README.md
doc/diagram/: arch.puml  balance.puml  hookpeer.puml  hookwallet.puml  newtransaction.puml  ricezioneblocco.puml  warnwallet.puml
doc/latex/: .gitignore  relazione.tex
retibtc/include/: blockchain.h  fullio.h  io.h  list.h  net.h  p2p.h  rwsincro.h  sockwrap.h  transaction.h  tree.h  utils.h  vitc.h
retibtc/lib/: blockchain.c  fullio.c  io.c  list.c  net.c  rwsincro.c  sockwrap.c  transaction.c  tree.c  utils.c  vitc.c
retibtc/src/n_node/: main.c  n_node.h  node_handler.c  old.main.c  peer.c  peer.h  wallet_handler.c
retibtc/src/w_node/: main.c  old.main.c  w_node.c  w_node.h  wallet.c  wallet.h
